added some notes about spaces in html

--- a/photosite.html
+++ b/photosite.html
@@ -30,7 +30,7 @@
 
     <!-- All Photos Licensed Under Creative Commons 2.0 -->
     <!-- https://creativecommons.org/licenses/by/2.0/legalcode  -->
-
+    <!-- for some reason html will add white space between img and span so they won't work right without being right next to each other -->
 </body>
 
 </html>
